<resources>
    <string name="app_name">VideoCollection</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">设置</string>
    <string name="clear_input">ClearInput</string>
    <string name="todo">TODO</string>


    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>


    <string name="menu_local_video">本地视频</string>
    <string name="menu_online_video">在线视频</string>


    <string name="cube_views_load_more_loading">loading…</string>
    <string name="cube_views_load_more_click_to_load_more">Click to load more</string>
    <string name="cube_views_load_more_loaded_no_more">All the data has been loaded</string>
    <string name="cube_views_load_more_loaded_empty">It is empty. :(</string>
    <string name="cube_views_load_more_error">Load error, click to retry</string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="v_dec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_time_text">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="giraffe_player_url_empty">Please specify the address of the video playback</string>

    <string name="small_problem">Player encountered a small problem</string>

    <string name="can_not_play">can not play this video</string>

    <string name="not_support">player not support this device</string>

    <string name="media_controller_play_pause">Play/Pause</string>
    <string name="data_flow_tips">您正在使用移动网络播放视频\n可能产生较高流量费用</string>
    <string name="continue_text">继续</string>
    <string name="render_type">解码方式</string>
    <string name="render_surface">硬解</string>
    <string name="render_texture">软解</string>
    <string name="its_me">oo__H__oo</string>
    <string name="my_git">https://github.com/HeHang0</string>
    <string name="slash">/</string>
    <string name="back_play">后台播放</string>
    <string name="mirror">镜像翻转</string>
    <string name="search">搜索</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="about">关于</string>
    <string name="enter">进入</string>
    <string name="open_video_with_browser">浏览器打开视频</string>
    <string name="open_video_with_me">软件内打开视频</string>
    <string name="open_video_url">打开视频链接</string>
</resources>
