<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_menu"
        android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/ic_menu_live"
            android:title="直播" />
        <item
            android:id="@+id/nav_youku"
            android:icon="@drawable/ic_menu_youku"
            android:title="优酷" />
        <item
            android:id="@+id/nav_qqlive"
            android:icon="@drawable/ic_menu_qqlive"
            android:title="腾讯" />
        <item
            android:id="@+id/nav_iqiyi"
            android:icon="@drawable/ic_menu_iqiyi"
            android:title="爱奇艺" />
        <item
            android:id="@+id/nav_cloundmusic"
            android:icon="@drawable/ic_menu_cloudmusic"
            android:title="云音乐" />
        <item
            android:id="@+id/nav_youtube"
            android:icon="@drawable/ic_menu_youtube"
            android:title="YouTube" />
        <item
            android:id="@+id/nav_bilibili"
            android:icon="@drawable/ic_menu_bilibili"
            android:title="哔哩哔哩" />
        <item
            android:id="@+id/nav_douban_top_250"
            android:icon="@drawable/ic_menu_douban"
            android:title="豆瓣Top250" />
    </group>

    <item
        android:title="@string/about"
        android:iconTint="@color/colorPrimary">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
